DontExpiReBack/src/main/java/org/example/error/GenderFormException.java
package org.example.error;

public class GenderFormException extends RuntimeException {
    public GenderFormException(String message) {
        super(message);
    }
}
